--- a/2025/09 September/2025-09-01.md
+++ b/2025/09 September/2025-09-01.md
@@ -1,12 +1,4 @@
----
-links:
-  - "[[Calendar]]"
-tags:
-  - day
----
 # Monday 1 September 2025
-
-← [[2025-08-31|Yesterday]] • [[2025-09-02|Tomorrow]] →
 
 ## ✔️ Tasks
 
@@ -15,13 +7,9 @@ tags:
 - [x] Complete FreeCodeCamp CSS computer basics lesson
 - [x] Start FreeCodeCamp CSS basics lesson
 
-## 🖥️ What I worked on
-
-
-
 ## 📓 Key lessons
 
-- CSS basic syntax %%more info in lessons from [[2025-09-10]]%%
+- CSS basic syntax
 	- **Selectors:** targets HTML elements to apply the styles to (type, class, ID)
 	- **Declaration blocks:** syntax inside curly brackets, made of properties and values
 ```
@@ -35,17 +23,9 @@ selector {
   font-weight: bold;
 }
 ```
-- Use ==meta viewport== element in HTML to scale your page on different screen sizes
-	- Use ==width=device-width== to match the page’s width to the screen’s
-	- Use ==initial-scale=1.0== to display the page at 100% zoom by default
+- Use *meta viewport* element in HTML to scale your page on different screen sizes
+	- Use *width=device-width* to match the page’s width to the screen’s
+	- Use *initial-scale=1.0* to display the page at 100% zoom by default
 ```
 <meta name="viewport" content="width=device-width, initial-scale=1.0"
 ```
-
-## ✖️ Bugs or blockers
-
-
-
-## 🐈‍⬛ Next steps
-
-- [ ] 
